--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -862,7 +862,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¿Ya sabes dónde adquirir tu lencería ideal? ¡Estamos cerca de tí!</div>
+<div id="i14">¡Nuevos estilos! Nuestro mejor T-Shirt Bra. 2 bras sólo por 1,999 Pesos.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/YNpOffr.png"/>
 <!--#/#--><!--#i4.i214.image.html:image/html-->
@@ -902,7 +902,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i218.image.html:image/html-->
 <img id="i218" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Encuentra tu combinación ideal. ¡Localiza tu tienda más cercana!</div>
+<div id="i34">Encuentranos cerca de tí en Antara Fashion Hall.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
