--- a/Victorias secret/Venetian.html
+++ b/Victorias secret/Venetian.html
@@ -2324,7 +2324,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ThkenRu.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡Encuentra la combinación perfecta  cerca de tí!</div>
+<div id="i63">Presentando tus bras sin aros favoritos. Detalles cool, colores vibrantes, y 
+confort absoluto.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
@@ -2332,7 +2333,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i73.shape.html:shape/html-->
 <div id="i73"></div>
 <!--#/#--><!--#i77.text.html:text/html-->
-<div id="i77">¡Estamos en Antara Fashion Hall con promociones increíbles!</div>
+<div id="i77">¡Disponibles en Antara Fashion Hall!</div>
 <!--#/#--><!--#i79.image.html:image/html-->
 <img id="i79" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i81.image.html:image/html-->
