--- a/Victorias secret/Video.html
+++ b/Victorias secret/Video.html
@@ -9,10 +9,16 @@
     <title>320x480 - Argeta</title>
     <link href="https://fonts.googleapis.com/css?family=Trebuchet MS;" rel="stylesheet">
     <style>
+
+    @font-face {
+  font-family: 'BentonSans';
+  src: url('BentonSans.woff'); 
+ 
+}
         body.videonew {
             background-color: #FFFFFF;
             color: black;
-            font-family: 'Trebuchet MS';
+            font-family: 'BentonSans';
             margin: 0;
             padding: 0;
         }
@@ -121,7 +127,7 @@
         }
 
         .videonew_text_title {
-            font-size: 100%;
+            font-size: 120%;
             color: #453936;
             display: inline-block;
             width: 90%;
@@ -328,8 +334,8 @@
            <div class="tgx_logo"><a href="https://goo.gl/maps/iVB569UEMj22"></a><img style="height: 40px;" src="https://i.imgur.com/ThkenRu.png"></div>
            
         <div class="videonew_text"> 
-            <span class="videonew_text_title videonew_text_bold">
-               El comfort perfecto para cada día. ¿ya sabes dónde encontrar el tuyo?
+            <span class="videonew_text_title">
+               El comfort perfecto para cada día.<br>  2 bras sólo por 1,999 Pesos.
             </span>
            
 
@@ -339,8 +345,8 @@
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= http://www.victoriassecret.mx"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="21" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url= http://www.victoriassecret.mx" target="block">
-                            <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="21" /></a>
+                            <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado http://www.victoriassecret.mx" target="block">
+                            <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/ObtrzfY.png" title="compartir en whatsapp" width="21" /></a>
 
                             <a class="shared" href="https://twitter.com/home?status= http://www.victoriassecret.mx" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="21" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="21" /></a>
