--- a/Victorias secret/fade-completo2.html
+++ b/Victorias secret/fade-completo2.html
@@ -83,7 +83,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/jwLQDem.png");
+            background: url("https://i.imgur.com/mGWeulg.png");
             background-size: cover;
             
 
