--- a/Victorias secret/Venetian.html
+++ b/Victorias secret/Venetian.html
@@ -2155,28 +2155,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
 #i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 95px;
-        -ms-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 356px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 356px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 356px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 356px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
 #i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 37px;
-        -ms-transform: translate(0, 0) translate(95px, 404px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(95px, 404px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(95px, 404px) rotate(0deg);
-        transform: translate(0, 0) translate(95px, 404px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(95px, 410px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(95px, 410px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(95px, 410px) rotate(0deg);
+        transform: translate(0, 0) translate(95px, 410px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 287px; height: 65px;
-        -ms-transform: translate(0, 0) translate(20px, 273px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 273px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 273px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 273px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 280px; height: 46px;
+        -ms-transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 34px;
@@ -2243,6 +2243,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
+/*#/#*//*#i77.text.css:text/base/css*/
+#i77 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i77.i78.positioning.css:positioning/base/css.2*/
+#i77 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 21px;
+        -ms-transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
+        transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
+}
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i68.shape.css:shape/base/css*/
@@ -2264,15 +2273,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 352px) rotate(0deg);
-}
-/*#/#*//*#i77.text.css:text/base/css*/
-#i77 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i77.i78.positioning.css:positioning/base/css.2*/
-#i77 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 45px;
-        -ms-transform: translate(0, 0) translate(37px, 316px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(37px, 316px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(37px, 316px) rotate(0deg);
-        transform: translate(0, 0) translate(37px, 316px) rotate(0deg);
 }
 /*#/#*//*#i79.image.css:image/base/css*/
 #i79 { opacity: 1; }
@@ -2301,6 +2301,27 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
         transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
 }
+/*#/#*//*#i97.text.css:text/base/css*/
+#i97 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
+#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 22px;
+        -ms-transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
+        transform: translate(0, 0) translate(36px, 313px) rotate(0deg);
+}
+/*#/#*//*#i99.font-local.css:font/font-local/css*/
+/*#i99.i100.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'BentonSans';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/BentonSans.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
+/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2315,8 +2336,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i5" src="https://i.imgur.com/V3tXrkw.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/KDQBAck.png"></dataimg>
-<!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/WbBQX2Q.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
@@ -2324,22 +2343,25 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ThkenRu.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Presentando tus bras sin aros favoritos. Detalles cool, colores vibrantes, y 
-confort absoluto.</div>
+<div id="i63">Bras sin aros, con detalles cool,colores vibrantes, y confort absoluto.</div>
+<!--#/#--><!--#i77.text.html:text/html-->
+<div id="i77">¡Disponibles en Antara Fashion Hall!</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
 <!--#/#--><!--#i73.shape.html:shape/html-->
 <div id="i73"></div>
-<!--#/#--><!--#i77.text.html:text/html-->
-<div id="i77">¡Disponibles en Antara Fashion Hall!</div>
 <!--#/#--><!--#i79.image.html:image/html-->
 <img id="i79" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i81.image.html:image/html-->
-<img id="i81" src="https://i.imgur.com/dC7ka2p.png"/>
+<img id="i81" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i83.image.html:image/html-->
 <img id="i83" src="https://i.imgur.com/YN2Vf5g.png"/>
+<!--#/#--><!--#i97.text.html:text/html-->
+<div id="i97">2 bras sólo por 1,999 Pesos.</div>
+<!--#/#--><!--#i99.font.html:font/html-->
+<!--#/#--><!--#i101.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2388,8 +2410,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
-
 /*#/#*//*#i44.image.js:image/base/js*/
 
 /*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
@@ -2410,7 +2430,7 @@ var el = document.getElementById('i16');
 
 el.addEventListener('click', function(e){
     /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2425,7 +2445,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2440,7 +2460,7 @@ var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2459,7 +2479,7 @@ var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
     /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u= http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=%20http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2476,7 +2496,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2493,13 +2513,15 @@ var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
     /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status= http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status= http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
+bmShow('i97');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2521,14 +2543,11 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: AEGJrxA.jpg; fileId: ; sourceTypeId: externalUrl;
+name: SOdAqcd.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: ua3gfPa.jpg; fileId: ; sourceTypeId: externalUrl;
+name: V3tXrkw.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: OgYvJyf.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: WbBQX2Q.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
+name: KDQBAck.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
@@ -2542,8 +2561,12 @@ customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ¡Encuentra la combinación perfecta  cerca de tí!; customName: false;
+name: Bras sin aros, con detalles cool,colores vibrantes, y confort absoluto.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i77.text.meta:text/meta*/
+name: ¡Estamos en Antara Fashion Hall con promociones increíbles!; customName: false;
+/*#/#*//*#i77.i78.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: 4W22b7q.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
@@ -2558,17 +2581,13 @@ data: /*!*/{}/*!*/;
 name: Shape 3;
 /*#/#*//*#i73.i74.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i77.text.meta:text/meta*/
-name: ¡Estamos en Antara Fashion Hall con promociones increíbles!; customName: false;
-/*#/#*//*#i77.i78.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i79.image.meta:image/meta*/
 name: mJBNNLr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i79.i80.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i81.image.meta:image/meta*/
-name: dC7ka2p.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: ObtrzfY.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i81.i82.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -2577,4 +2596,12 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i97.text.meta:text/meta*/
+name: 2 bras sólo por 1,999 Pesos.; customName: false;
+/*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i99.font.meta:font/meta*/
+name: Web Font: BentonSans; type: font-local; customName: ;
+/*#/#*//*#i101.font.meta:font/meta*/
+name: Font 1; type: ; customName: ;
 /*#/#*/--><!--#/#-->
