--- a/Victorias secret/fade-completo.html
+++ b/Victorias secret/fade-completo.html
@@ -97,7 +97,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/jwLQDem.png");
+            background: url("https://i.imgur.com/mGWeulg.png");
             background-size: cover;
           
         }
