--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -506,7 +506,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:BentonSans; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 259px; height: 58px;
         -ms-transform: translate(-50%, -50%) translate(-2px, 85px) rotate(0deg);
@@ -787,7 +787,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(210px, 216px) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 281px; height: 55px;
         -ms-transform: translate(-50%, -50%) translate(3px, 85px) rotate(0deg);
@@ -850,7 +850,21 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
+
+/*#/#*//*#i99.font-local.css:font/font-local/css*/
+/*#i99.i100.font-local.css:font-local/css.1*/
+@font-face {
+font-family: 'BentonSans';
+src: url('fonts/');
+src: url('fonts/?#iefix') format('embedded-opentype'),
+url('fonts/BentonSans.woff') format('woff'),
+url('fonts/') format('truetype'),
+url('fonts/') format('opentype'),
+url('fonts/') format('svg');
+}
 /*#/#*/
+/*#/#*/
+
 </style>
 <!--#/#--></head>
 <body>
@@ -874,7 +888,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i242.image.html:image/html-->
 <img id="i242" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i4.i244.image.html:image/html-->
-<img id="i244" src="https://i.imgur.com/dC7ka2p.png"/>
+<img id="i244" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i4.i246.image.html:image/html-->
 <img id="i246" src="https://i.imgur.com/YN2Vf5g.png"/>
 <!--#/#-->
@@ -910,7 +924,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i248.image.html:image/html-->
 <img id="i248" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i6.i250.image.html:image/html-->
-<img id="i250" src="https://i.imgur.com/dC7ka2p.png"/>
+<img id="i250" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i6.i252.image.html:image/html-->
 <img id="i252" src="https://i.imgur.com/YN2Vf5g.png"/>
 <!--#/#-->
@@ -1011,7 +1025,7 @@ var el = document.getElementById('i244');
 
 el.addEventListener('click', function(e){
     /*#i262.i263.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1138,7 +1152,7 @@ var el = document.getElementById('i250');
 
 el.addEventListener('click', function(e){
     /*#i256.i257.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url=https://goo.gl/maps/iVB569UEMj22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
