--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -506,7 +506,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:BentonSans; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:BentonSans; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 259px; height: 58px;
         -ms-transform: translate(-50%, -50%) translate(-2px, 85px) rotate(0deg);
@@ -787,7 +787,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(210px, 216px) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 15px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 281px; height: 55px;
         -ms-transform: translate(-50%, -50%) translate(3px, 85px) rotate(0deg);
@@ -876,7 +876,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¡Nuevos estilos! Nuestro mejor T-Shirt Bra. 2 bras sólo por 1,999 Pesos.</div>
+<div id="i14">¡Nuevos estilos! Nuestro mejor T-Shirt Bra.<br>2 bras sólo por 1,999 Pesos.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/YNpOffr.png"/>
 <!--#/#--><!--#i4.i214.image.html:image/html-->
@@ -916,7 +916,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i218.image.html:image/html-->
 <img id="i218" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Encuentranos cerca de tí en Antara Fashion Hall.</div>
+<div id="i34">Encuentranos cerca de tí en <br> Antara Fashion Hall.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
