--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -884,7 +884,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
-<img id="i224" src="https://i.imgur.com/ThkenRu.png"/>
+<img id="i224" src="https://i.imgur.com/zfbxL9z.png"/>
 <!--#/#--><!--#i4.i242.image.html:image/html-->
 <img id="i242" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i4.i244.image.html:image/html-->
@@ -904,7 +904,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i228.image.html:image/html-->
-<img id="i228" src="https://i.imgur.com/ThkenRu.png"/>
+<img id="i228" src="https://i.imgur.com/zfbxL9z.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -920,7 +920,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
-<img id="i232" src="https://i.imgur.com/ThkenRu.png"/>
+<img id="i232" src="https://i.imgur.com/zfbxL9z.png"/>
 <!--#/#--><!--#i6.i248.image.html:image/html-->
 <img id="i248" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i6.i250.image.html:image/html-->
