--- a/Victorias secret/Cube.html
+++ b/Victorias secret/Cube.html
@@ -884,7 +884,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
-<img id="i224" src="https://i.imgur.com/zfbxL9z.png"/>
+<img id="i224" src="https://i.imgur.com/O5Er1RJ.png"/>
 <!--#/#--><!--#i4.i242.image.html:image/html-->
 <img id="i242" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i4.i244.image.html:image/html-->
@@ -904,7 +904,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i228.image.html:image/html-->
-<img id="i228" src="https://i.imgur.com/zfbxL9z.png"/>
+<img id="i228" src="https://i.imgur.com/O5Er1RJ.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -916,11 +916,11 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i218.image.html:image/html-->
 <img id="i218" src="https://i.imgur.com/4W22b7q.png"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">Encuentranos cerca de tí en <br> Antara Fashion Hall.</div>
+<div id="i34">Encuéntranos cerca de ti en <br> Antara Fashion Hall.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
-<img id="i232" src="https://i.imgur.com/zfbxL9z.png"/>
+<img id="i232" src="https://i.imgur.com/O5Er1RJ.png"/>
 <!--#/#--><!--#i6.i248.image.html:image/html-->
 <img id="i248" src="https://i.imgur.com/mJBNNLr.png"/>
 <!--#/#--><!--#i6.i250.image.html:image/html-->
