--- a/Victorias secret/fade-completo2.html
+++ b/Victorias secret/fade-completo2.html
@@ -357,7 +357,7 @@
 
     
   <div class="cta"> <a href=" http://www.victoriassecret.mx" target="_blank">
-    <img src="https://i.imgur.com/zfbxL9z.png" style="height: 40px;"></a></div>   
+    <img src="https://i.imgur.com/O5Er1RJ.png" style="height: 40px;"></a></div>   
   
      
   
