--- a/Victorias secret/Venetian.html
+++ b/Victorias secret/Venetian.html
@@ -2172,11 +2172,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 280px; height: 46px;
-        -ms-transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 267px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 74px;
+        -ms-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 267px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 90px; height: 34px;
@@ -2247,10 +2247,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i77 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: BentonSans; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i77.i78.positioning.css:positioning/base/css.2*/
 #i77 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 249px; height: 21px;
-        -ms-transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
-        transform: translate(0, 0) translate(36px, 335px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
+        transform: translate(0, 0) translate(36px, 336px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
@@ -2341,9 +2341,9 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i44.image.html:image/html-->
 <img id="i44" src="https://i.imgur.com/xT6jVUu.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/zfbxL9z.png"/>
+<img id="i46" src="https://i.imgur.com/ThkenRu.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Bras sin aros, con detalles cool,colores vibrantes, y confort absoluto.</div>
+<div id="i63">Bras sin aros, con detalles cool, colores vibrantes, y confort absoluto.</div>
 <!--#/#--><!--#i77.text.html:text/html-->
 <div id="i77">¡Disponibles en Antara Fashion Hall!</div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2496,7 +2496,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2561,7 +2561,7 @@ customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: Bras sin aros, con detalles cool,colores vibrantes, y confort absoluto.; customName: false;
+name: Bras sin aros, con detalles cool, colores vibrantes, y confort absoluto.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i77.text.meta:text/meta*/
