--- a/AECC/Venetian2.html
+++ b/AECC/Venetian2.html
@@ -2270,17 +2270,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Todo lo que necesitas saber sobre el cáncer de mama.</div>
+<div id="i7">Obtén toda la información necesaria sobre el cáncer de pulmón.</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/ToTUIgn.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/INkwhS3.png"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/Lj1tT44.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/VAmhf3g.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/HR9hyuC.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/rdxBNVd.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/Wpur3y0.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i26.button.html:button/html-->
@@ -2353,7 +2353,7 @@ var el = document.getElementById('i26');
 
 el.addEventListener('click', function(e){
     /*#i28.i29.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-mama?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-pulmon?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2370,7 +2370,7 @@ var el = document.getElementById('i33');
 
 el.addEventListener('click', function(e){
     /*#i39.i40.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-mama?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-pulmon?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2387,7 +2387,7 @@ var el = document.getElementById('i35');
 
 el.addEventListener('click', function(e){
     /*#i41.i42.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-mama?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-pulmon?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2404,7 +2404,7 @@ var el = document.getElementById('i37');
 
 el.addEventListener('click', function(e){
     /*#i43.i44.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-mama?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.aecc.es/es/todo-sobre-cancer/tipos-cancer/cancer-pulmon?utm_source=Webads&utm_medium=MLT&utm_term=paid-contenido&utm_content=DOBN-DOBN&utm_campaign=Continuidad-Performance-2019'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2441,11 +2441,11 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: INkwhS3.png; fileId: ; sourceTypeId: externalUrl;
+name: Lj1tT44.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: VAmhf3g.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: rdxBNVd.png; fileId: ; sourceTypeId: externalUrl;
+name: Wpur3y0.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i26.button.meta:button/meta*/
