--- a/when-they-see-us/fade-hover.html
+++ b/when-they-see-us/fade-hover.html
@@ -89,7 +89,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/nrGe1AK.jpg");
+            background: url("https://i.imgur.com/rviVdIw.jpg");
             background-size: cover;
 
             
