--- a/Officedepotlenovo/FijoCompleto1.html
+++ b/Officedepotlenovo/FijoCompleto1.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Computadoras-de-Escritorio/Computadoras-y-All-in-One/COMPUTADORA-LENOVO-330-AIO-(AMD,-19-5-PULG-)/p/84731?utm_source=Mosaic&utm_medium=Banner_Logitech&utm_campaign=Logitech_GF&utm_term=Paid&utm_content=OD';
+                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/Laptop/LAPTOP-LENOVO-LEGION-Y530-%28COREI5%2C-15-6-PULG-%29/p/84705';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
