--- a/Officedepotlenovo/index.html
+++ b/Officedepotlenovo/index.html
@@ -334,7 +334,7 @@ var el = document.getElementById('i56');
 
 el.addEventListener('click', function(e){
     /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/Laptop/LAPTOP-LENOVO-LEGION-Y530-%28COREI5%2C-15-6-PULG-%29/p/84705'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/search/?q=86651%2084705%3Arelevance%3Abrand%3ALENOVO&text=86651%2084705&utm_source=MOSAIC&utm_medium=INTEL_NATIVE&utm_campaign=INTEL_GAMING&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -347,7 +347,7 @@ var el = document.getElementById('i8');
 
 el.addEventListener('click', function(e){
     /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/Laptop/LAPTOP-LENOVO-LEGION-Y530-%28COREI5%2C-15-6-PULG-%29/p/84705'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/search/?q=86651%2084705%3Arelevance%3Abrand%3ALENOVO&text=86651%2084705&utm_source=MOSAIC&utm_medium=INTEL_NATIVE&utm_campaign=INTEL_GAMING&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
