--- a/Officedepotlenovo/FijoPeq2.html
+++ b/Officedepotlenovo/FijoPeq2.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/Laptop/LAPTOP-LENOVO-LEGION-Y530-%28COREI5%2C-15-6-PULG-%29/p/84705';
+                adfClickTAGUrl = 'https://www.officedepot.com.mx/officedepot/en/search/?q=86651%2084705%3Arelevance%3Abrand%3ALENOVO&text=86651%2084705&utm_source=MOSAIC&utm_medium=INTEL_NATIVE&utm_campaign=INTEL_GAMING&utm_term=Paid&utm_content=OD';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
